# roscamp-repo-2

./: GUI 2  GUI VER 3.1  GUI_사용자단.py  GUI_사용자단_퇴식.py  README.md  Raider_Move.py  camera_send.py  name  pinkyDB.sql  실패작 controller_node  얼굴수집 (pnk).py  초음파 주행 로직.py  컴퓨터 노드  핑키봇 폴더
GUI 웹 카메라 버전/: 메인 gui 코드  카메라 예시 코드인데
GUI 제작 코드들/: GUI  GUI VER 3  GUI 사용자용  GUI 위치 파악 안되는 코드  GUI 최최종  GUI_2.1.py  GUI_사용자단.py  GUI실행  GUI예시.py
GUI이pinky_cam_수신/: GUI.py  cam_get_IP.py  cam_send_IP.py
Pink_ARU_move/: Pink_ARU_XY_pc.py  raspberry_car.py
pinky bot/: controler node.py  controler_node_raider.py  controller_node_초음파.py  mapping code.py
pinky./: GUICAM pinky용  bringup_controller.launch.xml 카메라까지  controller+ridar.py  controller_node  domain_brige  goal_points  ridarridar...  중앙 GUI_Face.py
人脸/: fcae_GUI  人脸识别.py  远程连接摄像头方案  얼굴인식.py
기타 분류 얼굴인식 라이더/: README.md  얼굴 인식 과 물체인식 동시.py  핑키 회전 각도 보정-원하는 각도로 갈 수 있으음
로봇팔/: 로봇팔 마커 중심 이동 0.1.1  로봇팔 마커 중심으로 이동 및 회전 0.3.1  마커 중심 이동에 필요한 파일  마커 중심으로 말단 장치 이동 0.2.1  사용법
로봇팔/robot a/jet_ws/install/: setup.sh
로봇팔/robot a/jet_ws/src/my_dual_arm/: package.xml  setup.py
로봇팔/robot b/jet_ws/install/: local_setup.sh
로봇팔/임시 보관용/: 로봇팔 a 노드
로봇팔/컴퓨터/jet_ws/install/: local_setup.sh  setup.sh
로봇팔/컴퓨터/jet_ws/src/my_dual_arm/: package.xml  setup.py
로봇팔/컴퓨터/jet_ws/src/my_dual_arm/my_dual_arm/: coordinator_node.py  robot_a1_node.py  robot_b1_node.py
식판 적재 및 회수/: 로봇팔a  로봇팔b  컴퓨터
연동하는 로봇팔 코드/: 로봇팔 b  컴퓨터
최종 로봇팔/: 로봇팔 A  로봇팔 B  추가 에정  컴퓨터 노드
최종코드/: b1_arm  mapping launch
최종코드/GUI 최종코드/: 중앙 GUI
(+12 files in other folders)
